# fastapi-template

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py
app/internal/database/: models.py
app/internal/middlewares/: __init__.py  file_middleware.py
app/internal/repositories/: user_repository.py
app/internal/services/: file_service.py  user_service.py
app/routers/: __init__.py  files_router.py  users_router.py
benchmarks/: user_random_id.lua  user_random_page_limit.lua
seeders/: users_seeder.py
tests/: conftest.py  test_users.py
