[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "fastapi-template"
version = "0.0.1"
dependencies = [
  "fastapi[standard]",
  "sqlmodel"
]
requires-python = ">=3.9"
authors = [
  {name = "Atero645"}
  ]

description = "FastAPI testing template"
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
dev = [
    "ruff"
]