[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "fastapi-template"
version = "0.0.1"
dependencies = [
  "fastapi[standard]",
  "sqlmodel",
  "pydantic-settings",
  "python-dotenv",
  "psycopg2"
]
requires-python = ">=3.9"
authors = [
  {name = "Atero645"}
  ]

description = "FastAPI testing template"
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "faker"
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing"
testpaths = ["tests"]